Update issue templates

--- a/.github/ISSUE_TEMPLATE/报告错误.md
+++ b/.github/ISSUE_TEMPLATE/报告错误.md
@@ -1,8 +1,8 @@
 ---
-name: Bug report
-about: Create a report to help us improve
+name: 报告错误
+about: 创建一个报告以帮助我们改进
 title: ''
-labels: ''
+labels: bug
 assignees: ''
 
 ---
