--- a/.github/ISSUE_TEMPLATE/需求建议.md
+++ b/.github/ISSUE_TEMPLATE/需求建议.md
@@ -1,6 +1,6 @@
 ---
-name: Feature request
-about: Suggest an idea for this project
+name: 需求建议
+about: 建议一个需求，或者新增一个功能
 title: ''
 labels: enhancement
 assignees: ''
